--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@ body {
   overflow: hidden;
   font-family: 'Poppins', sans-serif;
   user-select: none;
-  background-color: lightgreen;
+  background-color: black;
 }
 .search {
   width: 160px;
