--- a/public/index.html
+++ b/public/index.html
@@ -1,105 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr X</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://kit.fontawesome.com/0f2d6fbdbb.js" crossorigin="anonymous"></script>
-    <script src="/index.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
-    <link rel="shortcut icon" href="/lean.png" type="image/x-icon">
-<link rel="icon" href="/lean.png" type="image/x-icon">
-<style type="text/css">
-body {
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mr X</title>
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <script src="https://kit.fontawesome.com/0f2d6fbdbb.js" crossorigin="anonymous"></script>
+  <script src="/index.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+  <link rel="shortcut icon" href="/lean.png" type="image/x-icon">
+  <link rel="icon" href="/lean.png" type="image/x-icon">
+  <style type="text/css">
+    body {
       text-align: center;
-    position: fixed;
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  font-family: 'Poppins', sans-serif;
-  user-select: none;
-  background-color: black;
-}
-.search {
-  width: 160px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      overflow: hidden;
+      font-family: 'Poppins', sans-serif;
+      user-select: none;
+      background-color: black;
+      color: red;
+    }
+    .stars {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      z-index: -1;
+    }
+    .star {
+      position: absolute;
+      background: white;
+      border-radius: 50%;
+      animation: twinkle linear infinite, moveStars linear infinite;
+      animation-duration: 1s, 5s; /* twinkle duration, moveStars duration */
+    }
+    @keyframes twinkle {
+      0%, 100% {
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+    }
+    @keyframes moveStars {
+      0% {
+        transform: translateY(0);
+      }
+      100% {
+        transform: translateY(100vh);
+      }
+    }
+    .search {
+      width: 160px;
       border-radius: 5px 0px 0px 5px;
       border-right: none;
-}
-.test-btn {
-    border-left: none;
+    }
+    .test-btn {
+      border-left: none;
       border-radius: 0 5px 5px 0;
       cursor: pointer;
       background-color: white;
       transition-duration: 0.4s;
-}
-.test-btn:hover {
-  background-color: black;
-  color: white;
-  transition-duration: 0.4s;
-}
-.main {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    border-radius: 5px;
-}
-button, input {
+    }
+    .test-btn:hover {
+      background-color: black;
+      color: white;
+      transition-duration: 0.4s;
+    }
+    .main {
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
+      border-radius: 5px;
+    }
+    button, input {
       background-color: white;
-    border-color: black;
-    border: 2px solid black;
-    padding: 10px 10px;
-    transition-duration: 0.4s;
-}
-button:hover {
-  transition-duration: 0.4s;
-  
-}
-.bruh:hover {
-  background-color: black;
-  color: white;
-  transition-duration: 0.4s;
-}
-.btn {
+      border-color: black;
+      border: 2px solid black;
+      padding: 10px 10px;
+      transition-duration: 0.4s;
+      color: red;
+    }
+    button:hover {
+      transition-duration: 0.4s;
+    }
+    .bruh:hover {
+      background-color: black;
+      color: white;
+      transition-duration: 0.4s;
+    }
+    .btn {
       cursor: pointer;
       background-color: white;
       transition-duration: 0.4s;
-}
-.btn:hover {
-  background-color: black;
-  color: white;
-  transition-duration: 0.4s;
-
-}
-.yopyopyop {
-        cursor: pointer;
+      color: red;
+    }
+    .btn:hover {
+      background-color: black;
+      color: white;
+      transition-duration: 0.4s;
+    }
+    .yopyopyop {
+      cursor: pointer;
       background-color: white;
       transition-duration: 0.4s;
-}
-@keyframes yopyopyop {
-  from {border-radius: 10px;}
-  to {border-radius: 25px;}
-}
+      color: red;
+    }
+    @keyframes yopyopyop {
+      from {border-radius: 10px;}
+      to {border-radius: 25px;}
+    }
+    .neon-title {
+      color: red;
+      font-size: 36px;
+      font-family: 'Press Start 2P', cursive;
+      text-align: center;
+      position: absolute;
+      top: 10%; /* Adjusted to be more at the top */
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-shadow: 0 0 10px red, 0 0 20px red, 0 0 40px red; /* Red Neon Glow */
+    }
+  </style>
+  <script>
+    // Function to generate a random number between min and max
+    function getRandomNumber(min, max) {
+      return Math.random() * (max - min) + min;
+    }
 
-</style>
+    // Function to create a star element and add it to the stars container
+    function createStar() {
+      const star = document.createElement('div');
+      star.className = 'star';
+      star.style.top = `${getRandomNumber(0, 100)}%`;
+      star.style.left = `${getRandomNumber(0, 100)}%`;
+      star.style.width = `${getRandomNumber(1, 3)}px`;
+      star.style.height = star.style.width;
+      document.getElementById('stars-container').appendChild(star);
+    }
+
+    // Function to generate stars
+    function generateStars(numStars) {
+      for (let i = 0; i++) {
+        createStar();
+      }
+    }
+
+    // Generate stars (you can adjust the number as needed)
+    generateStars(50);
+  </script>
 </head>
 <body> 
-  
+  <div class="neon-title">Mr X Proxy V2</div>
   <div class="box"> 
-<h1 >Mr X Proxy V2</h1><h3>The proxy site that lets you <br>explore freely with quick access to your favorite sites.</h3>
-<div class="main">
-<input class="bruh search" list="listid" id="input" placeholder="https://youtube.com" autofocus >
- 
-<button class="bruh parents test-btn" id="go" onclick="go()"><i class="fa-solid fa-magnifying-glass"></i></button></div></div><h3>Quick Access</h3><a class="button btn" href="/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-/"><button class="btn" style="border-radius: 5px; cursor:pointer;">Youtube</button></a>&nbsp;<a class="button btn" href="/service/hvtrs8%2F-wuw%2Ctuivcj.vv-/"><button class="btn yopyopyop" style="border-radius: 5px; cursor:pointer;">Twitch</button></a>&nbsp;<a class="button btn" href="/service/hvtr%3A-%2Fqecrah%2Cbpate%2Ccmm/"><button class="btn" style="border-radius: 5px; cursor:pointer;">Brave</button></a>&nbsp;<a class="button btn" href="/service/hvtr%3A-%2Fgpkc%2Cawbpuj.zyx/"><button class="btn" style="border-radius: 5px; cursor:pointer;">Libreddit</button></a>&nbsp;<a class="button btn" href="/service/hvtr%3A-%2Fkntifimuq.poakq%2Fdegd-pmpwlcr/"><button class="btn" style="border-radius: 5px; cursor:pointer;">Invidious</button></a>
-
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3>The proxy site that lets you <br>explore freely with quick access to your favorite sites.</h3>
+    <div class="main">
+      <input class="bruh search" list="listid" id="input" placeholder="https://youtube.com" autofocus >
+      <button class="bruh parents test-btn" id="go" onclick="go()"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </div>
+  </div>
+  <h3>Quick Access</h3>
+  <a class="button btn" href="/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-/"><button class="btn" style="border-radius: 5px; cursor:pointer;">YouTube</button></a>&nbsp;
+  <a class="button btn" href="https://www.google.com" target="_blank"><button class="btn" style="border-radius: 5px; cursor:pointer;">Google</button></a>&nbsp;
+  <div class="stars" id="stars-container"></div>
 </body>
 </html>
