--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,13 @@
       transform: translate(-50%, -50%);
       text-shadow: 0 0 10px red, 0 0 20px red, 0 0 40px red; /* Red Neon Glow */
     }
+    .copyright {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      color: white;
+      font-size: 12px;
+    }
   </style>
   <script>
     // Function to generate a random number between min and max
@@ -179,6 +186,12 @@
   <h3>Quick Access</h3>
   <a class="button btn" href="/service/hvtrs8%2F-wuw%2Cymuvu%60e%2Ccmm-/"><button class="btn" style="border-radius: 5px; cursor:pointer;">YouTube</button></a>&nbsp;
   <a class="button btn" href="https://www.google.com" target="_blank"><button class="btn" style="border-radius: 5px; cursor:pointer;">Google</button></a>&nbsp;
+  <a class="button btn" href="/service/hvtr%3A-%2Fqecrah%2Cbpate%2Ccmm/"><button class="btn" style="border-radius: 5px; cursor:pointer;">Brave</button></a>&nbsp;
   <div class="stars" id="stars-container"></div>
+  <br>
+  <h3>__________________________________</h3>
+  <div class="copyright">
+    <p>&copy; 2023 Mr X Proxy V2 | Made by Mohamed Refaat</p>
+  </div>
 </body>
 </html>
